commit parcial
